added routhing and authentication

--- a/angular-sign-up-master/src/app/components/home/home.component.html
+++ b/angular-sign-up-master/src/app/components/home/home.component.html
@@ -1,5 +1,8 @@
 <div class="main">
     <h2 style="text-align: center;"><b>Contact Form and Contact List Page</b></h2>
+    <div style="padding-left:260px">
+    <button mat-raised-button color="green"  (click)="logout()">logout</button>
+  </div>
     <h3 style="padding-left: 60px;">Add Contacts</h3>
     <form [formGroup]="contactForm">
     <div>   
