--- a/angular-sign-up-master/src/app/components/signup/signup.component.html
+++ b/angular-sign-up-master/src/app/components/signup/signup.component.html
@@ -4,24 +4,26 @@
 <br>
 <p style="text-align: center;">Already have an account?<a class="sign-in-link" style="color:blue" routerLink="/sign-in">Sign in!</a> </p>
 <br>
-<form>
+<form [formGroup]="signupForm" (ngSubmit)="submit()">
 <mat-label>Email</mat-label>
 <br>
 <mat-form-field appearance="outline" style="width: 100%; ">
-    <input type="email" matInput placeholder="" >
+    <input type="email" matInput placeholder="" formControlName="email"  >
 </mat-form-field>
 <br>
 <mat-label>Password</mat-label>
 <br>
 <mat-form-field appearance="outline" style="width: 100%; ">
-    <input matInput placeholder="">
+    <input  matInput placeholder="" formControlName="password">
 </mat-form-field>
 <br>
 <mat-label>Secret</mat-label>
 <br>
 <mat-form-field appearance="outline" style="width: 100%; ">
-    <input matInput placeholder="">
+    <input type="text"  matInput placeholder="" >
+    <mat-hint  >Secret should be Name</mat-hint>
 </mat-form-field>
+<br>
 <br>
 <button mat-raised-button color="primary" style="width: 100%;text-align: start; "><i style="font-size:24px;padding-right: 40%;" class="fa">&#xf023;</i> Sign Up</button>
 <br>
